fix wrapping, use non hacky method to fix display issues when zoomed out

--- a/webview/style.css
+++ b/webview/style.css
@@ -68,6 +68,14 @@ body {
   color: var(--vscode-editorLineNumber-foreground);
   margin-right: 18px;
   width: var(--line-number-width);
+  white-space: nowrap;
+}
+.line-code {
+  display: flex;
+  flex-wrap: wrap;
+}
+.line-code > span {
+  white-space: nowrap;
 }
 #save-container {
   margin-top: 40px;
